# Rtos-comparison-study

./: .gitignore  README.md
common/application/: CANSimulator.hpp  DataTypes.hpp  DisplaySimulator.hpp  SensorSimulator.hpp
common/metrics/: PerformanceMonitor.hpp
comparison/analysis/: compare.py  report.md
comparison/reference/: custom_rtos_reference.json  freertos_reference.json
custom-rtos/: CMakeLists.txt
custom-rtos/application/: industrial_controller.cpp
custom-rtos/include/: Mutex.hpp  Queue.hpp  Scheduler.hpp  Semaphore.hpp  Task.hpp
freertos/: CMakeLists.txt
freertos/application/: industrial_controller.cpp
freertos/config/: FreeRTOSConfig.h
